# api/controllers/customer_controller.go
@@ -10,17 +10,15 @@ import (
 	"time"
 )
 
-// CreateUser	godoc
+// CreateCustomer	godoc
 // @Summary		create
 // @Tags Users
 // @Accept json
 // @Produce json
 // @Param data body string true "data"
-// @Param data body string true "data"
-// @Param data body string true "data"
-// @Success 200
+// @Success 200 {object} models.Customer
 // @Router /sign/up/ [post]
-func CreateUser(c *fiber.Ctx, client *Customers.CustomerClient) error {
+func CreateCustomer(c *fiber.Ctx, client *Customers.CustomerClient) error {
 	ctx := context.Background()
 
 	sign := &models.SignUp{}
@@ -28,7 +26,7 @@ func CreateUser(c *fiber.Ctx, client *Customers.CustomerClient) error {
 	if err := c.BodyParser(sign); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"error": true,
-			"msg":   err.Error(),
+			"msg":   "parse error: " + err.Error(),
 		})
 	}
 
@@ -56,13 +54,16 @@ func CreateUser(c *fiber.Ctx, client *Customers.CustomerClient) error {
 	if err != nil {
 		return c.Status(fiber.StatusConflict).JSON(fiber.Map{
 			"error": true,
-			"msg":   err.Error(),
+			"msg":   "rpc response error: " + err.Error(),
 		})
 	}
 
 	customer.Id, err = uuid.Parse(resp.Id)
 	if err != nil {
-		return err
+		return c.Status(fiber.StatusConflict).JSON(fiber.Map{
+			"error": true,
+			"msg":   "uuid parse error: " + err.Error(),
+		})
 	}
 	customer.TimeCreated = time.Unix(resp.Time, 0)
 	customer.IsBlocked = false
@@ -75,15 +76,15 @@ func CreateUser(c *fiber.Ctx, client *Customers.CustomerClient) error {
 	})
 }
 
-// GetUserDetails	godoc
+// GetCustomerDetails	godoc
 // @Summary		Get user details with id
 // @Tags Users
 // @Accept json
 // @Produce json
 // @Param id path string true "id"
-// @Success 200
-// @Router /user [get]
-func GetUserDetails(c *fiber.Ctx, client *Customers.CustomerClient) error {
+// @Success 200 {object} models.Customer
+// @Router /user/{id} [get]
+func GetCustomerDetails(c *fiber.Ctx, client *Customers.CustomerClient) error {
 	ctx := context.Background()
 
 	customer := &models.Customer{}
@@ -118,15 +119,15 @@ func GetUserDetails(c *fiber.Ctx, client *Customers.CustomerClient) error {
 	})
 }
 
-// BlockUser	godoc
+// BlockCustomer	godoc
 // @Summary		Block user by himself with id
 // @Tags Users
 // @Accept json
 // @Produce json
-// @Param id path string true "id"
+// @Param id body string true "id"
 // @Success 200
 // @Router /user/{id}/block [post]
-func BlockUser(c *fiber.Ctx, client *Customers.CustomerClient) error {
+func BlockCustomer(c *fiber.Ctx, client *Customers.CustomerClient) error {
 	ctx := context.Background()
 
 	var id string
@@ -155,42 +156,81 @@ func BlockUser(c *fiber.Ctx, client *Customers.CustomerClient) error {
 	})
 }
 
-// SignInUser	godoc
+// SignInCustomer	godoc
 // @Summary		Sign in
 // @Tags Users
 // @Accept json
 // @Produce json
-// @Param id path string true "id"
-// @Success 200
+// @Param id body string true "id"
+// @Success 200 {object} models.Customer
 // @Router /sign/in [post]
-func SignInUser(c *fiber.Ctx, client *Customers.CustomerClient) error {
-	//ctx := context.Background()
-	//
-	//sign := &models.SignIn{}
-	//validator := utils.NewValidator()
-	//
-	//customer := &models.Customer{}
-	//
-	//if err := c.BodyParser(customer); err != nil {
-	//	return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-	//		"error": true,
-	//		"msg":   err.Error(),
-	//	})
-	//}
-	//
-	//resp, err := (*client).Block(ctx, &Customers.BlockRequest{
-	//	BlockId: customer.Id,
-	//})
-	//
-	//if resp.Success {
-	//	return c.Status(fiber.StatusConflict).JSON(fiber.Map{
-	//		"error": true,
-	//		"msg":   err.Error(),
-	//	})
-	//}
-	//
-	//return c.JSON(fiber.Map{
-	//	"error": false,
-	//	"msg":   nil,
-	//})
+func SignInCustomer(c *fiber.Ctx, client *Customers.CustomerClient) error {
+	ctx := context.Background()
+
+	customer := &models.Customer{}
+
+	if err := c.BodyParser(customer); err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"error": true,
+			"msg":   "Parse error: " + err.Error(),
+		})
+	}
+
+	resp, err := (*client).SignIn(ctx, &Customers.SignInRequest{
+		Login:    customer.Login,
+		Password: customer.Password,
+	})
+
+	if err != nil {
+		return c.Status(fiber.StatusConflict).JSON(fiber.Map{
+			"error": true,
+			"msg":   "Authorizatione error: " + err.Error(),
+		})
+	}
+
+	customer.TimeCreated = time.Unix(resp.Time, 0)
+	customer.Id, err = uuid.Parse(resp.Id)
+	if err != nil {
+		return c.Status(fiber.StatusServiceUnavailable).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+	customer.FullName = resp.FullName
+	customer.Login = resp.Login
+	customer.IsBlocked = resp.IsBlocked
+
+	return c.JSON(fiber.Map{
+		"error":    false,
+		"msg":      nil,
+		"customer": customer,
+	})
+}
+
+// GetAllCustomers	godoc
+// @Summary	get all
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Success 200 {array} models.Customer
+// @Router /getall [get]
+func GetAllCustomers(c *fiber.Ctx, client *Customers.CustomerClient) error {
+	ctx := context.Background()
+
+	var resp *Customers.GetAllResponse
+
+	resp, err := (*client).GetAll(ctx, &Customers.GetAllRequest{})
+
+	if err != nil {
+		return c.Status(fiber.StatusConflict).JSON(fiber.Map{
+			"error": true,
+			"msg":   "Authorizatione error: " + err.Error(),
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"error":     false,
+		"msg":       nil,
+		"customers": resp,
+	})
 }
