# docs/swagger.yaml
@@ -1,4 +1,20 @@
 basePath: /
+definitions:
+  models.Customer:
+    properties:
+      blocked:
+        type: boolean
+      fullname:
+        type: string
+      id:
+        type: string
+      login:
+        type: string
+      password:
+        type: string
+      timecreated:
+        type: string
+    type: object
 host: localhost:3000
 info:
   contact: {}
@@ -7,21 +23,40 @@ info:
   title: PetBank API
   version: "1.0"
 paths:
+  /getall:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Customer'
+            type: array
+      summary: get all
+      tags:
+      - Users
   /sign/in:
     post:
       consumes:
       - application/json
       parameters:
       - description: id
-        in: path
+        in: body
         name: id
         required: true
-        type: string
+        schema:
+          type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/models.Customer'
       summary: Sign in
       tags:
       - Users
@@ -36,23 +71,13 @@ paths:
         required: true
         schema:
           type: string
-      - description: data
-        in: body
-        name: data
-        required: true
-        schema:
-          type: string
-      - description: data
-        in: body
-        name: data
-        required: true
-        schema:
-          type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/models.Customer'
       summary: create
       tags:
       - Users
@@ -71,6 +96,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/models.Customer'
       summary: Get user details with id
       tags:
       - Users
@@ -80,10 +107,11 @@ paths:
       - application/json
       parameters:
       - description: id
-        in: path
+        in: body
         name: id
         required: true
-        type: string
+        schema:
+          type: string
       produces:
       - application/json
       responses:
